lots more static checking